--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -54,7 +54,7 @@
 
           <div class="col d-flex">
             <form>
-              <input type="search" placeholder="Search your item" />
+              <input type="search" placeholder="Tìm kiếm sản phẩm" />
               <button class="d-flex"><i class="bx bx-search"></i></button>
             </form>
             <div class="cart-icon d-flex">
@@ -62,9 +62,9 @@
               <span>0</span>
             </div>
             {% if request.user.is_authenticated %}
-                <a class="{% if request.resolver_match.url_name == 'log_in' %} active {% endif %}" href="{% url 'log_in:log_in' %}">Đăng nhập</a>
+                <a class="{% if request.resolver_match.url_name == 'log_in' %} active {% endif %}" href="{% url 'log_in:log_in' %}">Đăng Xuất</a>
             {% else %}
-                <a class="{% if request.resolver_match.url_name == 'log_out' %} active {% endif %}" href="{% url 'log_out:log_out' %}">Đăng Xuất</a>
+                <a class="{% if request.resolver_match.url_name == 'log_out' %} active {% endif %}" href="{% url 'log_out:log_out' %}">Đăng Nhập</a>
             {% endif %}
 {#             <p>{{ request.user.first_name }} {{ request.user.last_name }} ({{ request.user.username }})</p>#}
           </div>
@@ -312,7 +312,7 @@
     <div class="footer-bottom">
       <div class="row container d-flex">
         <p></p>
-        <p>Được làm bởi nhóm 7</p>
+        <p>Nguyễn Viết Hiếu</p>
       </div>
     </div>
 
